# fuchsia

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/skills/bench/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/rfc/: SKILL.md
.claude/skills/worktree/: SKILL.md
.github/workflows/: ci.yml
crates/fuchsia-actor/: Cargo.toml
crates/fuchsia-actor-builtins/: Cargo.toml
crates/fuchsia-actor-builtins/benches/: conditioning.rs
crates/fuchsia-actor-builtins/src/: commit.rs  condition.rs  deadband.rs  debounce.rs  dedup.rs  if_.rs  lib.rs  passthrough.rs  switch.rs
crates/fuchsia-actor-lua/: Cargo.toml
crates/fuchsia-actor-lua/src/: actor.rs  base.rs  creator.rs  default.rs  host.rs  lib.rs
crates/fuchsia-actor-lua/tests/: async_host.rs  lua_actor.rs
crates/fuchsia-actor-wasm/: Cargo.toml
crates/fuchsia-actor-wasm/src/: actor.rs  base.rs  creator.rs  default.rs  host.rs  lib.rs
crates/fuchsia-actor-wasm/tests/: wasm_actor.rs
crates/fuchsia-actor/src/: actor.rs  channel.rs  error.rs  factory.rs  failure.rs  from_fn.rs  id.rs  lib.rs
crates/fuchsia-artifact/: Cargo.toml
crates/fuchsia-artifact/src/: lib.rs
crates/fuchsia-component-registry/: Cargo.toml  README.md
crates/fuchsia-component-registry/src/: in_memory.rs  lib.rs  manifest.rs
crates/fuchsia-config/: Cargo.toml
crates/fuchsia-config/src/: enums.rs  lib.rs  node.rs
crates/fuchsia-engine/: Cargo.toml
crates/fuchsia-engine/benches/: routing.rs
crates/fuchsia-engine/src/: engine.rs  error.rs  lib.rs  router.rs
crates/fuchsia-engine/tests/: builtin_branching.rs  correlation.rs  dag_enforcement.rs  dead_letter.rs  durable.rs  grouping.rs  node_death.rs  port_routing.rs  register_fn.rs  restart.rs  route_to_error.rs  routing.rs  setup_concurrency.rs  stress.rs  tracing_propagation.rs
crates/fuchsia-examples/: Cargo.toml
crates/fuchsia-examples/src/: main.rs
crates/fuchsia-host-config/: Cargo.toml
crates/fuchsia-host-http/: Cargo.toml
crates/fuchsia-host-kv/: Cargo.toml
crates/fuchsia-host-log/: Cargo.toml
crates/fuchsia-provisioner/: Cargo.toml
crates/fuchsia-provisioner/src/: error.rs  lib.rs  provisioner.rs
crates/fuchsia-provisioner/tests/: register_workflow.rs
crates/fuchsia-resolver/: Cargo.toml  README.md
crates/fuchsia-resolver/src/: error.rs  resolver.rs
crates/fuchsia-runtime/: Cargo.toml
crates/fuchsia-runtime/benches/: chain_throughput.rs  context.rs  fan_out.rs  runtime.rs
crates/fuchsia-runtime/benches/common/: mod.rs
crates/fuchsia-runtime/src/: error.rs  lib.rs  orchestrator.rs  registry.rs  runtime.rs  schedule.rs  supervisor.rs
crates/fuchsia-runtime/tests/: basic.rs  concurrency.rs
crates/fuchsia-task-runtime/: Cargo.toml
crates/fuchsia-task-runtime-lua/: Cargo.toml
crates/fuchsia-task-runtime-lua/src/: bindings.rs  executor.rs
crates/fuchsia-task-runtime-lua/tests/: e2e.rs
crates/fuchsia-task-runtime-wasm/: Cargo.toml
crates/fuchsia-task-runtime-wasm/src/: bindings.rs  executor.rs
crates/fuchsia-task-runtime-wasm/tests/: e2e.rs
crates/fuchsia-task-runtime/src/: executor.rs
crates/fuchsia-transport/: Cargo.toml
crates/fuchsia-transport/src/: correlation.rs  dead_letter.rs  delivery.rs  lib.rs  mailbox.rs
crates/fuchsia-workflow/: Cargo.toml
crates/fuchsia-workflow-orchestrator/: Cargo.toml
crates/fuchsia-workflow-orchestrator/src/: capabilities.rs  error.rs  lib.rs  orchestrator.rs
crates/fuchsia-workflow-orchestrator/tests/: lua_integration.rs
crates/fuchsia-workflow/src/: lib.rs  node.rs  workflow.rs
crates/fuchsia-workflow/src/store/: error.rs  mod.rs  node.rs  workflow.rs
crates/fuchsia-workflow/tests/: workflow_store.rs
crates/fuchsia-world/: Cargo.toml
crates/fuchsia-world/src/: lib.rs
crates/fuschia-component-registry/src/: in_memory.rs
crates/fuschia-config/src/: lib.rs
crates/fuschia-resolver/src/: error.rs  resolver.rs
crates/fuschia-workflow-orchestrator/src/: error.rs  lib.rs  orchestrator.rs
crates/fuschia-workflow-orchestrator/tests/: lua_integration.rs
crates/fuschia-workflow/src/: lib.rs  node.rs
docs/: ANALYSIS.md  COMMAND_EXECUTION.md  DESIGN.md  USE_CASES.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/architecture/: component-registry.md  engine.md  host-capabilities.md  host-extensibility.md  overview.md  runtimes.md
docs/book/src/components/: capabilities.md  command-execution.md  packaging.md
docs/book/src/examples/: use-cases.md
docs/book/src/reference/: analysis.md  crate-map.md  open-questions.md  roadmap.md
docs/book/src/rfcs/: async-actor-contract.md  dag-enforcement.md  engine-stress-testing.md  from-fn-actors.md  graceful-shutdown.md  in-graph-origination.md  index.md  javascript-actor.md  lifecycle-gated-routing.md  message-correlation-id.md  node-failure-handling.md  observability.md  output-ports.md  runs-and-results.md  supervised-bringup.md
docs/book/src/runtimes/: builtins.md  lua.md  wasm.md
docs/book/src/workflows/: config.md  execution.md  input-resolution.md  resolution.md
examples/: README.md  simple-workflow.json
examples/components/test-task--1.0.0/: component.wasm
src/: main.rs
test-components/actor-echo/: Cargo.toml
test-components/actor-echo/src/: lib.rs
test-components/actor-echo/wit/: world.wit
test-components/test-actor-component/src/: lib.rs
test-components/test-task-component/: Cargo.toml
test-components/test-task-component/src/: lib.rs
wit/: actor.wit  emit.wit  types.wit  world.wit
