[workspace]
resolver = "2"
members = [
  "crates/fuchsia-actor",
  "crates/fuchsia-transport",
  "crates/fuchsia-runtime",
  "crates/fuchsia-actor-builtins",
  "crates/fuchsia-actor-wasm",
  "crates/fuchsia-actor-lua",
  "crates/fuchsia-engine",
  "crates/fuchsia-examples",
  "crates/fuchsia-workflow",
  "crates/fuchsia-provisioner",
]

[workspace.package]
edition = "2024"
version = "0.0.1-alpha.0"
