[package]
name = "fuchsia-actor-builtins"
version.workspace = true
edition.workspace = true
description = "Native builtin actors (passthrough, conditioning operators) for fuchsia"

[dependencies]
fuchsia-actor = { path = "../fuchsia-actor" }
bson        = { version = "3", features = ["serde"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
minijinja   = "2"

[dev-dependencies]
tokio     = { version = "1", features = ["rt", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "conditioning"
harness = false
