[package]
name = "fuchsia-actor-lua"
version.workspace = true
edition.workspace = true
description = "Lua-script-hosting Actor implementation for fuchsia"

[dependencies]
fuchsia-actor = { path = "../fuchsia-actor" }
# `vendored` builds and statically links its own native `lua` lib; if another
# crate ever also links `lua`, the whole graph must agree on one `mlua` version.
mlua = { version = "0.11", features = ["lua54", "send", "vendored", "async"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
fuchsia-engine = { path = "../fuchsia-engine" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
