[package]
name = "fuchsia-actor"
version.workspace = true
edition.workspace = true
description = "Actor trait, message types, and factory registry for fuchsia"

[dependencies]
async-trait = "0.1"
bson        = { version = "3", features = ["serde"] }
serde_json  = "1"
thiserror   = "2"

[dev-dependencies]
# Async tests only — `from_fn`'s adapters drive the async `Actor` lifecycle.
tokio = { version = "1", features = ["macros", "rt"] }
