[package]
name = "fuchsia-engine"
version.workspace = true
edition.workspace = true
description = "Workflow engine for fuchsia: routes emissions between actors per a graph's edges"

[dependencies]
fuchsia-actor     = { path = "../fuchsia-actor" }
fuchsia-runtime   = { path = "../fuchsia-runtime" }
fuchsia-transport = { path = "../fuchsia-transport" }

thiserror = "2"
tokio     = { version = "1", features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
fuchsia-actor-builtins = { path = "../fuchsia-actor-builtins" }
bson                 = { version = "3", features = ["serde"] }
serde_json           = "1"
criterion            = { version = "0.5", features = ["html_reports"] }
tokio                = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tracing-subscriber.workspace = true

[features]
# Exposes `Engine::emit_sink`, an internal routing-bench seam — deliberately NOT
# part of the public API. Only the `routing` bench enables it (below), so a
# normal build / downstream dependant never sees it.
internal-bench = []

[[bench]]
name             = "routing"
harness          = false
required-features = ["internal-bench"]
