[package]
name = "fuchsia-resolver"
edition.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1"
fuchsia-component-registry = { path = "../fuchsia-component-registry" }
fuchsia-config = { path = "../fuchsia-config" }
fuchsia-workflow = { path = "../fuchsia-workflow" }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
