[package]
name = "fuchsia-runtime"
version.workspace = true
edition.workspace = true
description = "Actor lifecycle runtime for fuchsia"

[dependencies]
fuchsia-actor     = { path = "../fuchsia-actor" }
fuchsia-transport = { path = "../fuchsia-transport" }
serde_json      = "1"
thiserror       = "2"
tokio           = { version = "1", features = ["rt", "sync", "macros", "time"] }
tracing         = "0.1"

[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "runtime"
harness = false

[[bench]]
name    = "context"
harness = false
