[package]
name = "fuchsia-task-runtime-wasm"
edition.workspace = true
version.workspace = true
description = "Wasmtime implementation of NodeExecutor for fuchsia task execution"

[dependencies]
fuchsia-task-runtime = { path = "../fuchsia-task-runtime" }
fuchsia-host-kv = { path = "../fuchsia-host-kv" }
fuchsia-host-config = { path = "../fuchsia-host-config" }
fuchsia-host-log = { path = "../fuchsia-host-log" }
fuchsia-host-http = { path = "../fuchsia-host-http" }
wasmtime = { version = "40", features = ["component-model", "async"] }
wasmtime-wasi = { version = "40" }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
