[package]
name = "fuchsia-transport"
version.workspace = true
edition.workspace = true
description = "Message delivery plumbing (Delivery, Ack, mailbox channel) for fuchsia"

[dependencies]
fuchsia-actor = { path = "../fuchsia-actor" }
# `rt` for `tokio::task_local!` — the current-correlation task-local that rides
# each delivery (the analog of the tracing span's task-local).
tokio       = { version = "1", features = ["rt", "sync"] }
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
